--- a/1_task_pred_fake_news.ipynb
+++ b/1_task_pred_fake_news.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/StingrayS7/StingrayS7_/blob/main/practical_work_1%20.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/StingrayS7/practical-work_1/blob/main/1_task_pred_fake_news.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -43,7 +43,7 @@
       "metadata": {
         "id": "RMy7nIB16RCi"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "czab2LNG6UMO"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
         "id": "RYOu27N157Y8",
         "outputId": "2b192922-f954-441e-f5db-deabb196d1dd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
